/*
* @Author: yangdihang
* @Date: 2020/5/21
*/

syntax = "proto3";

import "config.proto";

package slime.config.v1alpha1;

option go_package = "slime.io/slime/framework/apis/config/v1alpha1";
message SlimeBootStatus {

}

message SlimeBootSpec {
  repeated Config module = 1;
  Component component = 2;
}

message Component {
  repeated string globalSidecarNamespace = 1;
  bool reportServer = 2;
}
